--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev":"nodemon run app.js"
+    "dev": "nodemon run app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "mongoose": "^8.18.0",
     "nodemon": "^3.1.10"
   }
 }
